[package]
name = "flyio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { veresion = "1.0" }
uuidv7 = { version = "0.1.3" }
rand = { version = "0.8.4" }
anyhow = { version = "1.0.71" }
